--- a/src/Commons/navbar.css
+++ b/src/Commons/navbar.css
@@ -3,7 +3,8 @@
 }
 
 .ppal{
-    /* background-color: rgb(255, 0, 0); */
     background: rgb(252,69,69);
-    background: linear-gradient(0deg, rgba(252,69,69,0.8701855742296919) 28%, rgba(255,255,255,1) 53%, rgba(255,0,0,1) 82%);
+    background: linear-gradient(180deg, rgba(252,69,69,0.8701855742296919) 28%, rgba(0,0,0,1) 53%, rgba(255,0,0,1) 82%);
+    /* background: rgb(252,69,69);
+    background: linear-gradient(0deg, rgba(252,69,69,0.8701855742296919) 28%, rgba(255,255,255,1) 53%, rgba(255,0,0,1) 82%); */
 }
