--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
-main {
-  background-color: gold;
+body{
+  /* background-image: linear-gradient(to right top, #a4a4a4, #787878, #4f4f4f, #2a2a2a, #000000);
+  background-repeat: no-repeat;
+  background-attachment: fixed; */
 }
