--- a/src/Pages/contacto/backend.css
+++ b/src/Pages/contacto/backend.css
@@ -4,8 +4,11 @@
 }
 
 .formulario {
-    
-    gap: 10px;
+    /* display: flex;
+    flex-flow: row wrap;
+    justify-content: center; */
+    max-width: 500px;
+    /* gap: 10px; */
     /* background-image: linear-gradient(to right top, #ff0000, #c20023, #820327, #420f1d, #000000); */
     background-image: linear-gradient(to right top, #a4a4a4, #787878, #4f4f4f, #2a2a2a, #000000);
 }
@@ -16,4 +19,5 @@
     justify-content: space-evenly;
     align-items: center;
     gap: 10px;
+    max-width: 500px;
 }
