--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 body{
-  background-image: linear-gradient(to right top, #a4a4a4, #787878, #4f4f4f, #2a2a2a, #000000);
+  background-image: linear-gradient(to right top, #ff0000, #c20023, #820327, #420f1d, #000000);
+  /* background-image: linear-gradient(to right top, #a4a4a4, #787878, #4f4f4f, #2a2a2a, #000000); */
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
