--- a/src/Pages/merchan/merchan.css
+++ b/src/Pages/merchan/merchan.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: space-evenly;
+    align-items: stretch;
     gap: 10px;
     padding: 30px;
 
@@ -16,12 +17,13 @@
 .tarjeta {
     max-width: 300px;
     width: 300px;
-    height: 500px;
+    height: max-content;
     border: 3px solid #303030;
     padding: 5px;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(255, 247, 247, 0.463);
-    background-image: linear-gradient(to right top, #ff0000, #c20023, #820327, #420f1d, #000000);
+    /* background-image: linear-gradient(to right top, #ff0000, #c20023, #820327, #420f1d, #000000); */
+    background-image: linear-gradient(to right top, #ff0000, #ff3d66, #ff75ad, #ffa6e0, #f8d1fc, #decae9, #c9c2d2, #b9b9b9, #878787, #585858, #2e2e2e, #000000);
 }
 
 
