--- a/src/Commons/navbar.css
+++ b/src/Commons/navbar.css
@@ -3,10 +3,12 @@
 }
 
 .ppal{
-    background: rgb(255,0,0);
-    background: linear-gradient(180deg, rgba(255,0,0,0.8701855742296919) 28%, rgba(15,15,15,1) 53%, rgba(255,0,0,1) 82%);
+    background-color: none;
+    /* background: linear-gradient(180deg, rgba(255,0,0,0.8701855742296919) 28%, rgba(15,15,15,1) 53%, rgba(255,0,0,1) 82%); */
     /* background: rgb(252,69,69);
     background: linear-gradient(0deg, rgba(252,69,69,0.8701855742296919) 28%, rgba(255,255,255,1) 53%, rgba(255,0,0,1) 82%); */
+    background-image: url('../img/camu.jpg');
+    opacity: 0.9;
 }
 
 .navppl{
@@ -24,7 +26,7 @@
     color: rgba(255, 255, 255, 0.862);
     transition: 0.5s;
     clip-path: polygon(12% 0, 100% 0, 88% 100%, 0% 100%);
-    background-color: rgba(159, 159, 159, 0.374);
+    background-color: rgba(255, 255, 255, 0.374);
 }
 
 .navppl2{
