--- a/src/Commons/navbar.css
+++ b/src/Commons/navbar.css
@@ -9,7 +9,28 @@
     background: linear-gradient(0deg, rgba(252,69,69,0.8701855742296919) 28%, rgba(255,255,255,1) 53%, rgba(255,0,0,1) 82%); */
     background-image: url('../img/camu.jpg');
     opacity: 0.9;
+    animation: moveBackground 40s infinite linear;
+    box-shadow: 0px 0px 30px 0px rgb(255, 0, 0);
 }
+
+
+@keyframes moveBackground {
+    0% {
+      background-position: 0 0;
+    }
+    50% {
+      background-position: 0 100%;
+    }
+    100% {
+      background-position: 0 0;
+    }
+  }
+
+
+
+
+
+
 
 .navppl{
     text-decoration: none;
@@ -23,10 +44,9 @@
 }
 
 .navppl:hover{  
-    color: rgba(255, 255, 255, 0.862);
     transition: 0.5s;
     clip-path: polygon(12% 0, 100% 0, 88% 100%, 0% 100%);
-    background-color: rgba(255, 255, 255, 0.374);
+    background-color: rgba(0, 0, 0, 0.652);
 }
 
 .navppl2{
