--- a/src/Pages/merchan/merchan.css
+++ b/src/Pages/merchan/merchan.css
@@ -52,18 +52,25 @@ p {
 }
 
 button {
-    display: block;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-evenly !important;
+    align-items: center !important;
     width: 100%;
-    padding: 10px;
-    background-color: #00ff08;
+    padding: 10px !important;
     color: #fff;
     border: none;
     border-radius: 5px;
     cursor: pointer;
 }
 
+button p {
+    display: flex;
+    align-items: center;
+}
+
 button:hover {
-    background-color: #00ff08;
+    background-color: #76767693 !important;
 }
 
 
@@ -80,8 +87,12 @@ button:hover {
     font-size: 80px;
     color: #ffffffcd; /* Color naranja para el graffiti */
     text-shadow: 3px 3px 4px rgb(255, 0, 0); /* Sombra al texto */
-    width: 100%;
+    width: 80%;
     text-align: center;
+    background-image: linear-gradient(to right top, #a4a4a48d, #7878788e, #4f4f4faf, #2a2a2a9f, #0000008a);
+    /* opacity: 0.7; */
+    border-radius: 20px;
+    box-shadow: 3px 3px 4px rgb(254, 254, 254);
   }
 
 
