--- a/src/Commons/navbar.css
+++ b/src/Commons/navbar.css
@@ -1,5 +1,6 @@
 #logotipo {
     height: 80px;
+    filter: drop-shadow(0px 5px 20px rgba(255, 255, 255, 0.799));
 }
 
 .ppal{
@@ -39,8 +40,8 @@
 
 .navppl:hover{  
     transition: 0.5s;
-    clip-path: polygon(12% 0, 100% 0, 88% 100%, 0% 100%);
-    background-color: rgba(0, 0, 0, 0.652);
+    border-radius: 20px;
+    background-color: rgba(255, 255, 255, 0.452);
 }
 
 .navppl2{
@@ -56,13 +57,6 @@
     text-decoration: underline;
 }
 
-.setting {
-    background-color: aqua;
-}
-
-.handleCloseUserMenu {
-    background-color: aqua;
-}
 
 .navppl:nth-child(2) {
     display: none;
