--- a/src/Pages/merchan/merchan.css
+++ b/src/Pages/merchan/merchan.css
@@ -1,5 +1,3 @@
-
-
 @import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
 
 
@@ -14,36 +12,83 @@
 
 }
 
-/* .tabla h2 {
-    width: 100%;
-} */
-
 .tarjeta {
     max-width: 300px;
     max-height: 530px;
     color: #fff;
     width: 300px;
-    /* height: max-content; */
     border: 3px solid #303030;
     padding: 5px;
     border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(255, 247, 247, 0.718);
-    /* background-color: linear-gradient(to right top, #ff0000, #c20023, #820327, #420f1d, #000000); */
-    /* background-image:{fondo} ; */
-    /* background-image: url('../../img/nsk2.png'); */
-    background-color: rgba(0, 0, 0, 0.784);
+    box-shadow: 0 5px 10px rgba(255, 247, 247, 0.814);
+    background-color: rgba(40, 40, 40, 0.736);
     background-size: cover;
     background-position: center;
     filter: blur(5);
+    background: rgb(255, 0, 9);
+    background: radial-gradient(circle, rgba(255, 0, 9, 0.8431022067029936) 2%, rgba(0, 5, 36, 0.9971638313528537) 50%, rgba(1, 11, 154, 0.9299369405965511) 57%, rgba(255, 0, 0, 0.8290966044620973) 100%);
 }
 
 
+.nombre {
+    display: flex;
+    justify-content: space-between;
+}
+
+.corazon {
+    color: rgb(255, 255, 255);
+    font-size: 30px;
+}
+
+.precio {
+    color: #ffb700;
+    text-shadow: 2px 3px 3px rgba(255, 0, 0, 0.703);
+    font-size: 30px;
+}
+
+
+.desc {
+    display: -webkit-box !important;
+    -webkit-box-orient: vertical !important;
+    -webkit-line-clamp: 2 !important;
+    overflow: hidden !important;
+    text-overflow: ellipsis !important;
+}
+
 .imagen {
-    width: 100%;
+    width: 90%;
     height: 200px;
     border-radius: 5px;
     margin-bottom: 10px;
+    /* filter: drop-shadow(20); */
+    /* box-shadow: 3px 3px 4px rgb(255, 0, 0); */
+    /* transform: scale(-1,1);  */
+    /* Gira la imagen */
+    filter: drop-shadow(0px 8px 20px rgb(255, 255, 255));
+    /* animation: shake 2s infinite; */
+
 }
+
+.imagen:hover {
+    transform: rotate(-20deg);
+    transition: 0.5s;
+    cursor: pointer;
+    scale: 1.3;
+}
+
+.imagen:not(hover) {
+    /* transform: rotate(20deg); */
+    transition: 1s;
+}
+
+/* @keyframes shake {
+    10% { transform: scale(1.05) rotate(5deg); }
+    20% { transform: scale(1.05) rotate(-5deg); }
+    30% { transform: scale(1.05) rotate(5deg); }
+    40% { transform: none; }
+} */
+
+
 
 h2 {
     margin: 0;
@@ -73,7 +118,12 @@ button p {
 }
 
 button:hover {
-    background-color: #76767693 !important;
+    transform: scale(107%);
+    transition: 0.2s;
+}
+
+button:not(hover) {
+    transition: 0.8s !important;
 }
 
 
@@ -88,157 +138,13 @@ button:hover {
 .graffiti-text {
     font-family: 'Shadows Into Light', cursive;
     font-size: 80px;
-    color: #ffffffcd; /* Color naranja para el graffiti */
-    text-shadow: 3px 3px 4px rgb(255, 0, 0); /* Sombra al texto */
+    color: #ffffff;
+    /* Color naranja para el graffiti */
+    text-shadow: 3px 3px 4px rgb(255, 0, 0);
+    /* Sombra al texto */
     width: 80%;
     text-align: center;
     background-image: linear-gradient(to right top, #a4a4a48d, #7878788e, #4f4f4faf, #2a2a2a9f, #0000008a);
-    /* opacity: 0.7; */
     border-radius: 20px;
     box-shadow: 3px 3px 4px rgb(254, 254, 254);
-  }
-
-
-
-  /* .card {
-    position: relative;
-    width: 600px;
-    height: 350px;
-    border-radius: 20px;
-    display: flex;
-    align-items: center;
-    transition: 0.5s;
-  }
-  
-  @media screen and (max-width: 1024px) {
-    .card {
-      background: #d83133;
-      transition: none;
-    }
-  }
-  
-  .card .circle {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 20px;
-    overflow: hidden;
-  }
-  
-  .card .circle::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #d83133;
-    clip-path: circle(120px at center);
-    transition: 0.5s;
-  }
-  
-  @media screen and (max-width: 1024px) {
-    .card .circle::before {
-      background: #d83133;
-      clip-path: none;
-      transition: none;
-    }
-  }
-  
-  .card:hover .circle::before {
-    background: #0065c3a5;
-    clip-path: circle(400px at center);
-  }
-  
-  .card img {
-    position: absolute;
-    top: 58%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    height: 300px;
-    pointer-events: none;
-    transition: 0.5s;
-  }
-  
-  @media screen and (max-width: 768px) {
-    .card img {
-      left: 50%;
-      top: 50%;
-      transform: translate(-50%, -50%);
-      height: 200px;
-    }
-  }
-  
-  .card:hover img {
-    left: 78%;
-    height: 400px;
-  }
-  
-  .card .content {
-    position: relative;
-    width: 50%;
-    left: 20%;
-    padding: 20px 20px 20px 40px;
-    transition: 0.5s;
-    opacity: 0;
-    visibility: hidden;
-  }
-  
-  @media screen and (max-width: 768px) {
-    .card .content {
-      width: 100%;
-      left: 0;
-      padding: 20px;
-    }
-  }
-  
-  .card:hover .content {
-    left: 0;
-    opacity: 1;
-    visibility: visible;
-  }
-  
-  .card .content h2 {
-    color: #fff;
-    text-transform: uppercase;
-    font-size: 2em;
-    line-height: 1em;
-    margin-bottom: 5px;
-  }
-  
-  .card .content h3 {
-    color: #fff;
-    text-transform: uppercase;
-    font-size: 1em;
-    margin-bottom: 10px;
-    font-weight: 700;
-  }
-  
-  .card .content p {
-    color: #fff;
-  }
-  
-  .card .content a {
-    position: relative;
-    color: #fff;
-    padding: 10px 20px;
-    border-radius: 10px;
-    background: #fff;
-    color: #111;
-    margin-top: 10px;
-    display: inline-block;
-    text-decoration: none;
-    font-weight: 700;
-    transition: 0.5s;
-  }
-  
-  @media screen and (max-width: 1024px) {
-    .card .content a {
-      background: transparent;
-      color: #fff;
-      transition: none;
-    }
-  } */
-  
+}
