--- a/src/Pages/tabla/tabla.css
+++ b/src/Pages/tabla/tabla.css
@@ -34,5 +34,14 @@ select {
 }
 
 span {
-    color: black;
+    color: rgb(0, 0, 0);
+    animation: shake 2s infinite;
+}
+
+
+@keyframes shake {
+    10% { transform: scale(1.05) rotate(5deg); }
+    20% { transform: scale(1.05) rotate(-5deg); }
+    30% { transform: scale(1.05) rotate(5deg); }
+    40% { transform: none; }
 }
